updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am the best friend a person can have </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Venezuela</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>At the moment i like coding</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to work for myself</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Clinton, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I like the web developer carrer path</p>
     </section>
 
     <footer id="footer">
